BKP/study/nginxy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-ingress
  labels:
    app: nginx-ingress

spec:
  selector:
    matchLabels:
      app: nginx-ingress

  replicas: 1

  template:
    metadata:
      labels:
        app: nginx-ingress

    spec:
      containers:
        - name: nginx-ingress
          image: nginx:1.14.2
          args:
            - /nginx-ingress
            - --configmap=$(POD_NAMESPACE)/nginx-configuration

          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443

          # resources:
          #   requests:
          #     cpu: 100m
          #     memory: 100Mi
          #   limits:
          #     cpu: 100m
          #     memory: 100Mi
