BKP/study/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: default
spec:
  selector:
    app: nginx-ingress
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
