BKP/study/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: study-external-service
spec:
  selector:
    app: study
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
