BKP/study/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
  #   nginx.ingress.kubernetes.io/configuration-snippet: |
  #     rewrite ^(/dash)$ $1/ redirect;
  #   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  #   kubernetes.io/ingress.class: public
  name: dashboard-ingress
  namespace: kubernetes-dashboard

spec:
  rules:
    - host: dashboards.local
      http:
        paths:
          - path: /kubernetes
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 80
