BKP/study/ingressx.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
spec:
  rules:
    - host: dashboards.local
      http:
      paths:
        - path: /kubernetes
          pathType: Prefix
          backend:
            service:
              name: kubernetes-dashboard
              port:
                number: 80
